# Attitude_Estimator_MTI630

./: .gitignore  CMakeLists.txt  Jacobian.m  README.md  Sabatini2006_HS.m  package.xml  xsmutex.h
src/: CallbackHandler.hpp  EKF.hpp  EKF2.hpp  Initialize_IMU.hpp  Jacobian.m  Mahonyfilter.hpp  RosRawDataPublisher.hpp  Ros_publisher.hpp  XsensSdkPublisher.hpp  main.cpp
